replace refresh button to back button , change header title while select stories

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -17,7 +17,7 @@
 		<div data-role='page' id='settings_page' data-transitions='fade'>
 			<div data-role="header">
 				<h1>Login to Pivotal Tracker</h1>
-				<a href='#' onclick="window.reload();">Refresh</a>
+				<a href='#' id="btn_back_page" data-role='button' >Back</a>
 			</div> 
 			
 			<div data-role="content">
