user identifier added with the time spent comment, and modified the bug of reading error. and manual sync added

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -67,15 +67,18 @@
 				</div>
 				
 				<fieldset class="ui-grid-a">
-					<div class="ui-block-a">
-						<select id='states'>
-							<option>Not loaded...</option>
-						</select>
-					</div>
+          <div class='ui-block-a'>
+            <a href='javascript:void(0);' data-role='button' data-theme='a' id='btn_sync'>Sync</a>
+          </div>
 					<div class="ui-block-b">
 						<a href='javascript:void(0);' data-role='button' data-theme="b" id='btn_start_timer'>Start</a>
 					</div>	   
 				</fieldset>
+
+        <select id='states'>
+          <option>Not loaded...</option>
+        </select>
+
 			</div>
 			
 			<div data-role='footer' data-position="fixed">
