--- a/Resources/index.html
+++ b/Resources/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="javascripts/jquery-mobile/jquery.mobile-1.0.1.js"></script>
 		<script type="text/javascript" src="javascripts/core_ext.js"></script>
 		<script type="text/javascript" src="javascripts/application.js"></script>
+    <script type="text/javascript" src="javascripts/utils.js"></script>
 		<script type="text/javascript" src="javascripts/events.js"></script>
 		<script type="text/javascript" src="javascripts/pt_api.js"></script>
 		<script type="text/javascript" src="javascripts/database.js"></script>
@@ -21,14 +22,17 @@
 			</div> 
 			
 			<div data-role="content">
-				<h3>Configure <acronym title="Pivotal Tracker">PT</acronym> Credentials</h3>
 				<ul data-role='listview' data-theme='b' data-inset='true'>
+          <li data-role="list-divider">Configure <acronym title="Pivotal Tracker">PT</acronym> Credentials</li>
 					<li>
 						<input type='text' placeholder="User Name" id='settings_username' name='username' data-mini="true"/>
 					</li>
 					<li>
 						<input type='password' placeholder="Password" id='settings_password' name="password" data-mini="true" />
 					</li>
+          <li>
+            <input type='text' placeholder="Set time tagging prefix" id='settings_prefix' name="prefix" data-mini="true" />
+          </li>
 					<li>
 						<input type='button' value="Save and Login" data-mini="true" id='btn_save_settings'/>
 					</li>
@@ -65,6 +69,10 @@
 				<div class='timer' id="timer_panel" data-corner='round'>
 					00:00:00
 				</div>
+
+        <select id='states'>
+          <option>Not loaded...</option>
+        </select>
 				
 				<fieldset class="ui-grid-a">
           <div class='ui-block-a'>
@@ -74,10 +82,6 @@
 						<a href='javascript:void(0);' data-role='button' data-theme="b" id='btn_start_timer'>Start</a>
 					</div>	   
 				</fieldset>
-
-        <select id='states'>
-          <option>Not loaded...</option>
-        </select>
 
 			</div>
 			
